--- a/styles/main.css
+++ b/styles/main.css
@@ -17,8 +17,8 @@
 }
 
 @font-face {
-  font-family: 'Impact';
-  src: url("styles/Impact.ttf") format("tff");
+  font-family: 'ImpactJG';
+  src: url('Impact.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -35,14 +35,14 @@ body {
 }
 
 h1 {
-  font-family: 'Impact';
+  font-family: 'ImpactJG';
   color: var(--hotpink);
   font-size: 54px;
   letter-spacing: 1px;
 }
 
 h2 {
-  font-family: 'Impact';
+  font-family: 'ImpactJG';
   color: var(--medpurple);
   font-size: 48px;
 }
@@ -50,13 +50,13 @@ h2 {
 h3 {
   background-color: var(--medgray);
   color: white;
-  font-family: 'Impact';
+  font-family: 'ImpactJG';
   padding: 5px 8px;
   letter-spacing: 0.5px;
 }
 
 h4 {
-  font-family: 'Impact';
+  font-family: 'ImpactJG';
 }
 
 .list-styled {
