--- a/views/main.html
+++ b/views/main.html
@@ -91,7 +91,7 @@
   <div>
     <div class="col-md-8 col-md-offset-2 col-sm-12 p-30">
       <h1 class="pb-50">Head Guru</h1>
-      <img class="head-guru" src="../images/jennie2020.jpg" alt="Photo of Jennie Brantley">
+      <img class="head-guru" src="../images/jsyd2021.jpg" alt="Photo of Jennie Brantley">
 
       <!-- About Paragraph -->
       <p>I'm a digital technology and marketing guru with over a decade of experience in helping small
