--- a/views/main.html
+++ b/views/main.html
@@ -107,8 +107,8 @@
       <p>
         <a class="waves-effect waves-light btn-large" ng-click="contact()"><i class="material-icons left">email</i>contact</a>
       </p>
-      <p ng-show="email !== undefined && email !== ''">{{email}}</p>
-      <p ng-show="mobile !== undefined && mobile !== ''">{{mobile}}</p>
+      <p>Email: jennie@jsyd.guru</p>
+      <p>Call or SMS: 601.278.3209</p>
     </div>
   </div>
   <div class="parallax"><img src="../images/backgrounds/jsyd_blueprint_bg_transparent.svg"></div>
